# serializer version: 1
# name: TestCommoditiesBalancesList.test_empty_result
  dict({
    'data': list([
    ]),
    'pagination': dict({
      'count': 0,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_filter_by_commodity_group
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '8714',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'front',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'ok',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-00000000000a',
        'volume': 724.18,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_filter_by_commodity_id
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-00000000000d',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestCommoditiesBalancesList.test_pagination[1-2]
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000010',
        'volume': 128.85,
      }),
      dict({
        'commodity': dict({
          'code': '8398',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'people',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000011',
        'volume': 94.96,
      }),
    ]),
    'pagination': dict({
      'count': 5,
      'next_page': 2,
      'page': 1,
      'page_size': 2,
      'previous_page': None,
      'total_pages': 3,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_pagination[2-2]
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5934',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'term',
          }),
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'create',
          'unit': 'pcs',
        }),
        'id': '00000000-0000-0000-0000-000000000017',
        'volume': 192.09,
      }),
      dict({
        'commodity': dict({
          'code': '4711',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000003',
            'name': 'under',
          }),
          'id': '00000000-0000-0000-0000-000000000003',
          'name': 'respond',
          'unit': 'pcs',
        }),
        'id': '00000000-0000-0000-0000-000000000018',
        'volume': 154.01,
      }),
    ]),
    'pagination': dict({
      'count': 5,
      'next_page': 3,
      'page': 2,
      'page_size': 2,
      'previous_page': 1,
      'total_pages': 3,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_search_by_commodity_code
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000007',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_search_by_commodity_name
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000004',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_success
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000000',
        'volume': 128.85,
      }),
      dict({
        'commodity': dict({
          'code': '8398',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'people',
          'unit': 'tons',
        }),
        'id': '00000000-0000-0000-0000-000000000001',
        'volume': 94.96,
      }),
    ]),
    'pagination': dict({
      'count': 2,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestCommoditiesBalancesList.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
